tests/parser/tests/cases/should_fail/missing_ref_type/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:6
1 |   k: & = & [1,2,3,4,5,6];
  |        ^ here
  = note: expected a type annotation, however received a `=`.
